force-app/main/default/objects/acn_ttn__Field_Reference__c/acn_ttn__Field_Reference__c.object-meta.xml
<CustomObject>
    <label>Field Reference</label>
    <nameField>
        <displayFormat>FR{0000}</displayFormat>
        <label>Field Reference  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field_Reference</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>