force-app/main/default/objects/acn_ttn__Field_Reference__c/fields/acn_ttn__Components_with_Error__c.field-meta.xml
<CustomField>
    <fullName>acn_ttn__Components_with_Error__c</fullName>
    <label>Components with Error</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>