force-app/main/default/objects/acn_ttn__Field_Reference__c/fields/acn_ttn__CS_Used_Characters__c.field-meta.xml
<CustomField>
    <fullName>acn_ttn__CS_Used_Characters__c</fullName>
    <label>CS Used Characters</label>
    <summarizedField>acn_ttn__Reference_Field_Detail__c.acn_ttn__CSmaxLengthUsed__c</summarizedField>
    <summaryForeignKey>acn_ttn__Reference_Field_Detail__c.acn_ttn__Field_Reference__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>