force-app/main/default/objects/acn_ttn__Field_Reference__c/fields/acn_ttn__CStotalRecordCount__c.field-meta.xml
<CustomField>
    <fullName>acn_ttn__CStotalRecordCount__c</fullName>
    <label>CStotalRecordCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>