force-app/main/default/objects/acn_ttn__Field_Reference__c/fields/acn_ttn__CustomMetaDataTransaction__c.field-meta.xml
<CustomField>
    <fullName>acn_ttn__CustomMetaDataTransaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CustomMetaDataTransaction</label>
    <referenceTo>acn_ttn__CustomMetaDataTransaction__c</referenceTo>
    <relationshipLabel>Field_Reference</relationshipLabel>
    <relationshipName>Field_Reference</relationshipName>
    <type>Lookup</type>
</CustomField>