force-app/main/default/objects/acn_ttn__Field_Reference__c/fields/acn_ttn__FieldId__c.field-meta.xml
<CustomField>
    <fullName>acn_ttn__FieldId__c</fullName>
    <label>FieldId</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>