force-app/main/default/objects/acn_ttn__Field_Reference__c/fields/acn_ttn__Fields_Selected__c.field-meta.xml
<CustomField>
    <fullName>acn_ttn__Fields_Selected__c</fullName>
    <label>Fields Selected</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>