force-app/main/default/objects/acn_ttn__Field_Reference__c/fields/acn_ttn__Some_Field__c.field-meta.xml
<CustomField>
    <fullName>acn_ttn__Some_Field__c</fullName>
    <label>Some Field</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>value 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>