force-app/main/default/objects/acn_ttn__Field_Reference__c/recordTypes/acn_ttn__test.recordType-meta.xml
<RecordType>
    <fullName>acn_ttn__test</fullName>
    <active>true</active>
    <label>test</label>
</RecordType>