force-app/main/default/objects/acn_ttn__Field_Reference__c/listViews/acn_ttn__All.listView-meta.xml
<ListView>
    <fullName>acn_ttn__All</fullName>
    <columns>NAME</columns>
    <columns>acn_ttn__Object_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>